--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Shopping List</title>
 
@@ -8,8 +9,9 @@
 
   <link rel="stylesheet" href="main.css">
 </head>
-<body>
 
+<body>
+  <!-- comment -->
   <div class="container">
     <h1>Shopping List</h1>
 
@@ -68,4 +70,5 @@
   </div>
 
 </body>
+
 </html>
