--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-  <!-- comment -->
   <div class="container">
     <h1>Shopping List</h1>
 
@@ -69,6 +68,8 @@
     </ul>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
